# meal-planner

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/fingrlix/: __init__.py  __main__.py  errors.py  fetch.py  menu.py  models.py  optimizer.py  parser.py
src/food/models/: __init__.py  ingredient.py  meal.py  recipe.py
src/meal_planner/: __init__.py
src/meal_planner/models/: __init__.py  course.py
src/nutrition/: __init__.py  __main__.py  calculator.py  models.py
src/parsing/: __init__.py
